--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -27,9 +26,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.josephasante.zapposandroidchallenge.MainActivity" />
             <intent-filter>
-                <action android:name="com.josephasante.zapposandroidchallenge.MY_CUSTOM_ACTION" />
+                <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="zappos-search"
+                    android:host="products"
+                    android:pathPrefix="/"/>
             </intent-filter>
         </activity>
     </application>
